<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VolunteerBeat</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile_default_name">Your Name</string>
    <string name="profile_default_email">xxx@youremail.xxx</string>
    <string name="profile_default_phone">000-000-0000</string>
    <string name="profile_default_address">your address</string>
    <string name="profile_default_aboutme">Write a brief biography to introduce yourself \n... \nWhat are your hobbies and interests?\n...\n...</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="non_profit_name">Great Non Profits</string>
    <string name="non_profit_desc">GreatNonprofits is the leading developer of tools that allow people to find, review, and share information about great -- and perhaps not yet great -- nonprofits and charities.</string>
    <string name="non_profit_image_desc">Non Profit Org Image</string>
    <string name="org_logo_image">Organization Logo</string>
    <string name="task_name_label">Task Name</string>
    <string name="task_short_desc">Short Description</string>
    <string name="distance_default_value">0.8mi</string>
    <string name="due_date_label">Due: 10/30/2014</string>
    <string name="save_heart_label">Save Task</string>
    <string name="title_activity_task_description">TaskDescriptionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="task_due_date_label">Oct. 15, Wednesday</string>
    <string name="task_due_time">2 pm</string>
    <string name="task_description">We have our annual fund raising gala at Westin. We need someone to pick up brochures.</string>
    <string name="task_posted_date">Posted: Oct. 11</string>
    <string name="task_share_image_desc">Task Share</string>
    <string name="volunteer_button_label">I can Volunteer</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="review_text">Years ago I attended an exhibit here and was blown away by the quality of artwork. The museum is small, but the exhibit I saw was truly breath-taking. The people who run this museum are very passionate about what they do, progressive minded and committed to community involvment. </string>
    <string name="default_message">I can help.</string>
    <string name="review_date">April 1, 2010</string>
    <string name="registered_login_label">"Already registered? "</string>
    <string name="login_button_label">sign-in</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_textview">username</string>
    <string name="password_textview">Password</string>
    <string name="signin_button_label">sign-in</string>
    <string name="password_hint">.....</string>
    <string name="email_hint">email</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email_tv_label">Email</string>
    <string name="name_textview">Name</string>
    <string name="user_first_last_name">First Last</string>
    <string name="register_button_label">Register</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="et_email_address_hint"> E-mail address</string>
    <string name="et_password_hint"> Password</string>
    <string name="b_signin_text">Sign In</string>
    <string name="tv_new_to_vb">New to VolunteerBeat?</string>
    <string name="b_create_account">Create an Account</string>
    <string name="et_name_hint">FirstName LastName</string>
    <string name="b_create_acnt">Create Account</string>
    <string name="tv_already_has_account">Already has account?</string>
    <string name="b_sign_in">Sign In</string>
    <string name="iv_orgheader_desc">"Organization Logo "</string>
    <string name="tvOrgHeaderName">At The CrossRoads</string>
    <string name="tv_header_org_location">Sanfrancisco, CA</string>
    <string name="tv_user_sign_out">Sign out?</string>
    <string name="title_activity_image_view_pager">ImageViewPagerActivity</string>

     <string name="swipe_viewpager">Swipe left or right to test ViewPager.</string>
</resources>