<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="197dp"
        android:text="@string/email_tv_label" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserEmail"
        android:layout_below="@+id/tvUserEmail"
        android:layout_marginTop="28dp"
        android:text="@string/password_textview" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPassword"
        android:layout_alignBottom="@+id/tvPassword"
        android:layout_alignLeft="@+id/etEmail"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bRegisterGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:onClick="onLoginGo"
        android:layout_marginTop="26dp"
        android:text="@string/signin_button_label" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvUserEmail"
        android:layout_alignBottom="@+id/tvUserEmail"
        android:layout_toRightOf="@+id/tvPassword"
        android:ems="10"
        android:hint="@string/email_hint" />

</RelativeLayout>
