<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/ivHeaderOrgLogoBG"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:alpha="0.2"
        android:contentDescription="@string/iv_orgheader_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/crossroads_logo" />

    <TextView
        android:id="@+id/tvHeaderOrgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivHeaderOrgLogo"
        android:layout_marginLeft="5dp"
        android:text="@string/tvOrgHeaderName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/rbHeaderOrgRating"
        style="@style/vbRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHeaderOrgName"
        android:layout_below="@+id/tvHeaderOrgName"
        android:clickable="false"
        android:focusable="false"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/tvHeaderOrgLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rbHeaderOrgRating"
        android:layout_below="@+id/rbHeaderOrgRating"
        android:text="@string/tv_header_org_location" />

    <ImageView
        android:id="@+id/ivHeaderOrgLogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/crossroads_logo" />

</RelativeLayout>