<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rbNonProfitRating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mbkandra16.apps.volunteerbeattaskdesc.activities.TaskDescriptionActivity" >

    <!--
    <ImageView
        android:id="@+id/ivNonProfitOrgLogo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/org_logo_image"
        android:onClick="showOrg"
        android:src="@drawable/ic_chc_logo_colorweb" />

    <TextView
        android:id="@+id/tvNonProfiOrgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivNonProfitOrgLogo"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/ivNonProfitOrgLogo"
        android:clickable="true"
        android:onClick="showOrg"
        android:text="@string/non_profit_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
        android:id="@+id/rbNonProfitOrgRating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvNonProfiOrgName"
        android:layout_below="@+id/tvNonProfiOrgName"
        android:clickable="false"
        android:focusable="false"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="4.5"
        android:stepSize="0.5" />

    <View
        android:id="@+id/vDivider1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/ivNonProfitOrgLogo"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivNonProfitOrgLogo"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/darker_gray" />
    -->

<FrameLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <View android:id="@+id/emiter_top_left"
        android:layout_gravity="top|left"
        android:layout_marginTop="-20dp"
        android:layout_width="1dp"
        android:layout_height="1dp" />
    
    <View android:id="@+id/emiter_top_right"
        android:layout_gravity="top|right"
        android:layout_marginTop="-20dp"
        android:layout_width="1dp"
        android:layout_height="1dp" />
    
        <View android:id="@+id/emiter_bottom"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="-10dp"
        android:layout_width="1dp"
        android:layout_height="1dp" />

</FrameLayout>
<!--  
    <View android:id="@+id/emiter_top_left"
        android:layout_gravity="top|left"
        android:layout_marginTop="-20dp"
        android:layout_width="1dp"
        android:layout_height="1dp" />
    
    <View android:id="@+id/emiter_top_right"
        android:layout_gravity="top|right"
        android:layout_marginTop="-20dp"
        android:layout_width="1dp"
        android:layout_height="1dp" />
    
        <View android:id="@+id/emiter_bottom"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="-10dp"
        android:layout_width="1dp"
        android:layout_height="1dp" />
        -->
    <include
        android:id="@+id/top_header"
        layout="@layout/layout_header" />

    <RelativeLayout
        android:id="@+id/rlTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_header"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/section_vb_normal"
        android:padding="6dp" >

        <TextView
            android:id="@+id/tvTaskName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/task_name_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTaskDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvTaskName1"
            android:layout_below="@+id/tvTaskName1"
            android:text="@string/task_due_date_label"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvTaskDueTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvTaskDueDate"
            android:layout_alignBottom="@+id/tvTaskDueDate"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"
            android:text="@string/task_due_time"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvTaskDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvTaskDueDate"
            android:layout_alignRight="@+id/tvTaskDueTime"
            android:layout_below="@+id/tvTaskDueDate"
            android:layout_marginTop="10dp"
            android:text="@string/task_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvTaskPostedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tvTaskDescription"
            android:layout_below="@+id/tvTaskDescription"
            android:layout_marginTop="3dp"
            android:text="@string/task_posted_date"
            android:textColor="#82858a"
            android:textSize="10sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/bVolunteer"
            style="@style/button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTaskPostedDate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:onClick="onClickVolunteer"
            android:text="@string/volunteer_button_label"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/holo_green_light"
            android:textSize="20sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <fragment
        android:id="@+id/fgMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/rlTask"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        class="com.google.android.gms.maps.SupportMapFragment" />

</RelativeLayout>