<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vbPgBackGround" 
    tools:context="${relativePackage}.${activityClass}" >
    
	<RelativeLayout
        android:id="@+id/flProfileImage"
        android:background="@drawable/profileheader"
        android:layout_width="match_parent"
    	android:layout_height="150dp">
    	<com.codepath.app6.volunteerbeat.utils.CircularImageView
        	android:id="@+id/ivProfileImage"
        	android:layout_width="90dp"
       		android:layout_height="90dp"
        	android:scaleType="centerCrop"
        	android:layout_centerInParent="true"
        	app:border_color="@color/vbLightGrey"
        	app:border_width="1dp"
        	android:src="@drawable/default_photo" 
        	android:onClick="onPickPhoto"/>
    	<TextView 
        	android:layout_alignLeft="@id/ivProfileImage"
        	android:layout_alignRight="@id/ivProfileImage"
        	android:layout_alignBottom="@id/ivProfileImage"
        	android:layout_height="wrap_content"
        	android:layout_width="75dp"
        	android:gravity="center_vertical|center_horizontal"
        	android:background="#80EF431C"
			android:text="Change"/>
	</RelativeLayout>

	<ImageView
        android:layout_width="match_parent"
       	android:layout_height="75dp"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        android:src="@drawable/pagefooter" />
	<RelativeLayout 
    	android:id="@+id/rlName"
        android:background="@drawable/section_vb_normal"
        android:layout_below="@id/flProfileImage"
        android:layout_marginLeft="12dp"  
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="-25dp"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content">
    	<EditText
       		android:id="@+id/tvName"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center_vertical|center_horizontal"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:textStyle="bold"
        	android:textSize="18sp"
        	android:hint="@string/profile_default_name" />   
	</RelativeLayout>       

	<RelativeLayout 
    	android:id="@+id/rlContactInfo"
        android:background="@drawable/section_vb_normal"
        android:layout_margin="9dp"  
        android:layout_below="@id/rlName"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content">
    	<TextView
        	android:id="@+id/tvEmailLabel"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textStyle="bold"
        	android:layout_marginLeft="50dp"
        	android:layout_marginTop="12dp"
        	android:paddingBottom="6dp"
        	android:text="Email" />
    	<EditText
        	android:id="@+id/tvEmail"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"        	
        	android:layout_marginLeft="12dp"
        	android:layout_alignBottom="@id/tvEmailLabel"
        	android:textSize="14sp"
        	android:layout_toRightOf="@id/tvEmailLabel"
        	android:hint="@string/profile_default_email" />
    	<TextView
       		android:id="@+id/tvPhoneLabel"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/tvEmailLabel"        
        	android:layout_alignRight="@id/tvEmailLabel"
			android:layout_marginTop="6dp"
        	android:paddingBottom="6dp"
			android:textStyle="bold"
        	android:text="Phone" />
    	<EditText
        	android:id="@+id/tvPhone"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignBottom="@id/tvPhoneLabel"
        	android:layout_alignLeft="@id/tvEmail"
        	android:textSize="14sp"
        	android:hint="@string/profile_default_phone" />
    	<TextView
        	android:id="@+id/tvAddrLabel"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/tvPhoneLabel"        	     
        	android:layout_alignRight="@id/tvEmailLabel"       	
			android:layout_marginTop="6dp"
			android:paddingBottom="6dp"
        	android:textStyle="bold"
        	android:text="Address" />
   		<EditText
        	android:id="@+id/tvAddr"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignBottom="@id/tvAddrLabel"
        	android:layout_alignLeft="@id/tvEmail"
        	android:textSize="14sp"
        	android:hint="@string/profile_default_address" />
        
	</RelativeLayout>
    

    <TextView
        android:id="@+id/tvAboutMeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:layout_marginTop="9dp"  
        android:layout_marginLeft="12dp"  
        android:layout_marginRight="12dp" 
        android:layout_below="@id/rlContactInfo"
        android:layout_alignLeft="@id/rlContactInfo"
        android:textStyle="bold"
        android:text="About Me" />
    
    <RelativeLayout 
    	android:id="@+id/rlAboutme"
        android:background="@drawable/section_vb_normal"
        android:layout_marginLeft="12dp"  
        android:layout_marginRight="12dp" 
        android:layout_below="@id/tvAboutMeLabel"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content">
    	<EditText
       		android:id="@+id/tvAboutMe"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="6dp"
        	android:paddingLeft="12dp"
        	android:paddingRight="12dp"
        	android:textSize="14sp"
        	android:layout_alignLeft="@id/tvAboutMeLabel"
        	android:hint="@string/profile_default_aboutme" />
    </RelativeLayout>
    
 
</RelativeLayout>
